# QRCodeReader

./: .gitmodules  CMakeLists.txt  README.md  Screenshot.sln
Screenshot/: CatchScreenDlg.cpp  CatchScreenDlg.h  MyTracker.cpp  ReadMe.txt  Screenshot.aps  Screenshot.cpp  Screenshot.rc  Screenshot.vcxproj  Screenshot.vcxproj.filters  ScreenshotDlg.cpp  ScreenshotDlg.h  resource.h
Screenshot/res/: Screenshot.rc2
